# app/Http/Controllers/AuthController.php
@@ -7,9 +7,34 @@ use Illuminate\Http\Request;
 use App\Models\User;
 use Illuminate\Support\Facades\Hash;
 use Illuminate\Validation\ValidationException;
+use App\Http\Resources\UserResource;
 
 class AuthController extends Controller
 {
+    
+    /**
+     * @OA\Post(
+     *     path="/api/v1/auth/register",
+     *     summary="Enregistrer un nouvel utilisateur",
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             @OA\Property(property="name", type="string", example="John Doe"),
+     *             @OA\Property(property="email", type="string", format="email", example="john.doe@example.com"),
+     *             @OA\Property(property="password", type="string", format="password", example="password123"),
+     *             @OA\Property(property="password_confirmation", type="string", format="password", example="password123")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Utilisateur enregistré",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="user", ref="#/components/schemas/User"),
+     *             @OA\Property(property="token", type="string")
+     *         )
+     *     )
+     * )
+     */
     public function register(Request $request)
     {
         $request->validate([
@@ -31,6 +56,28 @@ class AuthController extends Controller
             'token' => $token,
         ], 201);
     }
+
+    /**
+     * @OA\Post(
+     *     path="/api/v1/auth/login",
+     *     summary="Connexion d'un utilisateur",
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             @OA\Property(property="email", type="string", format="email", example="john.doe@example.com"),
+     *             @OA\Property(property="password", type="string", format="password", example="password123")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Utilisateur connecté",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="user", ref="#/components/schemas/User"),
+     *             @OA\Property(property="token", type="string")
+     *         )
+     *     )
+     * )
+     */
 
     public function login(Request $request)
     {
@@ -54,6 +101,20 @@ class AuthController extends Controller
             'token' => $token,
         ]);
     }
+
+    /**
+     * @OA\Post(
+     *     path="/api/v1/auth/logout",
+     *     summary="Déconnexion de l'utilisateur",
+     *     @OA\Response(
+     *         response=200,
+     *         description="Utilisateur déconnecté",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Successfully logged out")
+     *         )
+     *     )
+     * )
+     */
 
     public function logout(Request $request)
     {
